--- a/login.html
+++ b/login.html
@@ -17,14 +17,25 @@
             <div class="login-box">
                 <b>账号登录</b>
                 <form action="http://localhost:8081/login" id="login-form" method="POST">
-                    <input type="text" name="username" placeholder="账号" id="username"><span
-                        class=""></span>
+                    <input type="text" name="username" placeholder="账号" id="username"><span class=""></span>
                     <input type="password" name='password' placeholder="密码" id="password"><span></span>
                     <button type="submit" id="login-btn">登录</button>
                 </form>
             </div>
         </div>
     </div>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+        <li>10</li>
+    </ul>
     <script src="../jQuery.js"></script>
     <script src="./js/login.js"></script>
 </body>
